# v83-stock-cron

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DEBUG_PACK_EXAMPLE.md  DEPLOYMENT_CHECKLIST.md  DERIVATIVES_EVIDENCE_RUNBOOK.md  DISASTER_RECOVERY_RUNBOOK.md  Dockerfile  IMPLEMENTATION_DECISIONS.md  IMPLEMENTATION_SPEC.md  OPS_RT1_RUNBOOK.md  README.md  RELEASE_GATE.md  ROLLBACK_PLAN.md  pyproject.toml  requirements.txt
AI/: 00_PROJECT_RULES.md  01_BLUEPRINT_SUMMARY.md  02_ARCHITECTURE.md  03_CURRENT_STATE.md  04_TASK_BOARD.md  05_HANDOFF.md  06_TEST_COMMANDS.md  07_DECISION_LOG.md  08_IMPLEMENTATION_MEMORY.md
docs/: source_verification_matrix.md
frontend/: app.js  index.html  styles.css
migrations/: 0001_init.sql  0002_news.sql  0003_prediction_ledger.sql  0004_prediction_outcomes.sql  0005_prediction_feature_snapshots.sql  0006_prediction_derivatives_snapshots.sql  0007_prediction_origin.sql
schemas/: build_info.schema.json  derivatives_intelligence.schema.json  derivatives_metric.schema.json  derivatives_snapshot.schema.json  detail_view.schema.json  feature_snapshot.schema.json  news.schema.json  quant.schema.json  quant_v2_validation_report.schema.json  response.schema.json
scripts/: apply_migrations.py  calibration_report.py  check_build_info.py  check_no_forbidden_scope.py  check_no_full_article_body.py  check_no_secrets.py  collect_derivatives_evidence.py  diagnose_binance_registry.py  live_smoke.py  make_access_hash.py  manual_smoke.py  news_live_smoke.py  quant_v2_validation_report.py  resolve_outcomes.py  source_integrity_guard.py  (+1 more)
(+169 files in other folders)
