[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-probability-engine"
version = "0.1.0"
description = "Deterministic crypto probability and risk analysis app."
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".venv", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

